dataset1235/2025-2/1153765216/users/4261539586/executions/2372395858_3449543993.log
== RUN (2025-08-28 18:38:55)
-- CODE: 
from math import *
lado = int(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:34:24)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:23:58)
-- CODE: 
from math import *

lado = int(input("digite o valor do lado: "))
apotema = lado/(2*tan*(pi/10))
area = 5*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:14)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*(tan**(pi/10)))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*(tan**(pi/10)))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*(tan**(pi/10)))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*(tan**(pi/10)))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*(tan**(pi/10)))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*(tan**(pi/10)))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*(tan**(pi/10)))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:05:02)
-- CODE: 
from math import *

lado = int(input("digite o valor do lado: "))
apotema = lado/ (2*tan*(pi/10))
area = 5 * lado * apotema

print(lado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:13:50)
-- CODE: 
from math import *

lado = int(input("digite o valor do lado: "))
apotema = lado/(2*tan*(pi/10))
area = 5*lado*apotema

print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:33:30)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:41:42)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:04:34)
-- CODE: 
from math import *

lado = int(input("digite o valor do lado: "))
apotema = lado/ (2*tan**(pi/10))
area = 5 * lado * apotema

print(lado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan**(pi/10))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan**(pi/10))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan**(pi/10))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan**(pi/10))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan**(pi/10))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan**(pi/10))
                       ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:12:44)
-- CODE: 
from math import *

lado = int(input("digite o valor do lado: "))
apotema = lado/ (2*tan*(pi/10))
area = 5 * lado * apotema

print(lado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/ (2*tan*(pi/10))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:04:10)
-- CODE: 
from math import *

apotema = lado/ (2*tan**(pi/10))
area = 5 * lado * apotema

lado = int(input("digite o valor do lado: "))
print(lado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:32:59)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**pi/10)
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**pi/10)
                      ~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**pi/10)
                      ~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**pi/10)
                      ~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**pi/10)
                      ~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**pi/10)
                      ~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**pi/10)
                      ~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:40:38)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:43:55)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
informe o comprimento do lado: 123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
informe o comprimento do lado: 30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
informe o comprimento do lado: 276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
informe o comprimento do lado: 377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
informe o comprimento do lado: 69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
informe o comprimento do lado: 192.36
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:38:37)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:23:14)
-- CODE: 
from math import *

lado = float(input("digite o valor do lado: "))
apotema = lado/(2*tan*(pi/10))
area = 5*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:22:47)
-- CODE: 
from math import *

lado = float(input("digite o valor do lado: "))
apotema = lado/(2*tan*(pi/10))
area = 5*lado*apotema

print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:39:29)
-- CODE: 
from math import *
lado = int(input("informe o comprimento do lado: "))

apotema = lado/2*tan**(pi/10)
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan**(pi/10)
                     ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan**(pi/10)
                     ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan**(pi/10)
                     ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan**(pi/10)
                     ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan**(pi/10)
                     ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan**(pi/10)
                     ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:38:06)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:39:51)
-- CODE: 
from math import *
lado = int(input("informe o comprimento do lado: "))

apotema = lado/(2*tan**(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan**(pi/10))
                      ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:43:50)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
informe o comprimento do lado: 123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
informe o comprimento do lado: 30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
informe o comprimento do lado: 276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
informe o comprimento do lado: 377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
informe o comprimento do lado: 69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
informe o comprimento do lado: 192.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:14:04)
-- CODE: 
from math import *

lado = float(input("digite o valor do lado: "))
apotema = lado/(2*tan*(pi/10))
area = 5*lado*apotema

print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:33:48)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan*(pi/10))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan*(pi/10))
                    ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:39:41)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
None
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
None
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
None
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
None
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
None
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:43:28)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))

apotema = lado/(2*tan(**(pi/10)))
area = 5*lado*apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan(**(pi/10)))
                      ^^^^^^^^^^^^^^
TypeError: math.tan() argument after ** must be a mapping, not float
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan(**(pi/10)))
                      ^^^^^^^^^^^^^^
TypeError: math.tan() argument after ** must be a mapping, not float
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan(**(pi/10)))
                      ^^^^^^^^^^^^^^
TypeError: math.tan() argument after ** must be a mapping, not float
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan(**(pi/10)))
                      ^^^^^^^^^^^^^^
TypeError: math.tan() argument after ** must be a mapping, not float
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan(**(pi/10)))
                      ^^^^^^^^^^^^^^
TypeError: math.tan() argument after ** must be a mapping, not float
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/(2*tan(**(pi/10)))
                      ^^^^^^^^^^^^^^
TypeError: math.tan() argument after ** must be a mapping, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
